Resolves: fdo#78204 adjust note icons on comments-in-margins case

the page has been scaled by 75% and vertically centered so the page positions
need to be also adjusted.

Change-Id: I7ab6b4956933ba444441c857e78aee8e5c1cf97a